demo/ghost-blog-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-demo
  labels:
    app: blog-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-demo
  template:
    metadata:
      labels:
        app: blog-demo
    spec:
      containers:
      - name: blog-demo
        image: ghost:2.28-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
      volumes:
       - name: content
         persistentVolumeClaim:
           claimName: ghost-pv-claim
